--- a/style.css
+++ b/style.css
@@ -1,10 +1,13 @@
-*
-{
-    margin: 0;
-    padding: 0;
+*{
+  margin: 0;
+  padding: 0;
 }
 /* Possuir cor de fundo: rgb(253, 251, 251) */
-body
-{
-    background-color: rgb(253, 251, 251);
+body{
+  background-color: rgb(253,251,251);
+}
+/* O elemento com o id cabecalho deve ser fixo no topo da página, com a propriedade top tendo 0px. */
+#cabecalho{
+  position: fixed;
+  top: 0px;
 }
