--- a/style.css
+++ b/style.css
@@ -5,6 +5,12 @@ body {
     position:fixed;
     top:0px;
 }
-#minha-foto {
+#minha_foto {
     border-radius: 100px;
+}
+#licoes_aprendidas {
+
+}
+#licoes_a_aprender {
+    
 }
