--- a/style.css
+++ b/style.css
@@ -2,6 +2,11 @@
   margin: 0;
   padding: 0;
 }
-body, html {
-  background-color: rgb(253, 251, 251);
+body , html {
+  background-color: rgb(253 , 251 , 251);
+
+}
+#cabecalho {
+  position: fixed;
+  top: 0px;
 }
