--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 body {
     background-color: rgb(253, 251, 251);
 }
-cebecalho {
+#cebecalho {
     position: fixed;
     top: 0px;
+    width: 100%;
 }
