--- a/style.css
+++ b/style.css
@@ -1,10 +1,13 @@
-#cabecalho{
-    margin-top: 0px;
+#cabecalho {
+
+    margin-top: 0;
     position: fixed;
 }
-#minha_foto{
+#minha_foto {
+
     width: 20%;
 }
-body{
-    background-color: rgb(253, 251, 251);
+body {
+    
+    background-color: rgb(253 , 251 , 251);
 }
