--- a/style.css
+++ b/style.css
@@ -6,3 +6,12 @@ body {
     position: fixed;
     top: 0px;
 }
+
+#minha_foto {
+    width: 55%;
+}
+
+#licoes_aprendidas {
+    position: relative;
+    top: 350px;
+}
