--- a/style.css
+++ b/style.css
@@ -1,3 +1,12 @@
 body {
     background-color: rgb(253, 251, 251);
 }
+.cabecalho {
+    background-color: seagreen;
+    position: fixed;
+    top: 0px;
+}
+.titulo {
+    font-family: monospace;
+    font-style: italic;
+}
