--- a/style.css
+++ b/style.css
@@ -1,8 +1,13 @@
 body {
     background-color: rgb(253, 251, 251);
 }
-#cebecalho {
+#cabecalho {
+    background-color:green;
     position: fixed;
     top: 0px;
-    width: 100%;
+    width: 100%; 
+}
+#cabecalho #titulo {
+    text-align: center;
+    color:  black;
 }
