--- a/style.css
+++ b/style.css
@@ -1,14 +1,53 @@
 * {
   margin: 0;
   padding: 0;
+  font-family: monospace, Tahoma;
 }
 
 body {
   background-color: rgb(253 , 251 , 251);
+  width: 100%;
+  height: 100%;
+}
 
+a{
+  color: black;
+  text-decoration: none;
 }
 
 #cabecalho {
   position: fixed;
   top: 0;
+  background-color: #FDDC5C;
+  border: #665FD1 2px solid;
+  width: 100%;
+  height: 10%;
+  color: #665FD1;
+  text-align: center;
+}
+#corpoDaPag{
+  height: 80%;
+}
+
+.listas{
+  display: inline-block;
+  margin-left: 200px;
+  margin-bottom: 60px;
+}
+
+#rodape{
+  background-color: #FDDC5C;
+  color: #665FD1;
+  text-align: center;
+  height: 10%;
+  margin-top: 5%;
+}
+
+#rodape > h4{
+  margin-top: 20px;
+  display: inline-block;
+}
+
+.texto > p{
+  margin: 0px 20px;
 }
