--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 }
 
 body {
-  background-color: rgb(253 ,251 ,251);
+  background-color: rgb(253,251,251);
 }
 
 /* Class styles */
@@ -13,9 +13,8 @@ body {
 
 /* ID styles */
 #cabecalho {
-  background-color: rgb(97 , 145 , 236);
+  background-color: rgb(9,145,236);
   position: fixed;
-  top: 0px;
   width: 100%;
   height: 100px;
 }
