--- a/style.css
+++ b/style.css
@@ -1,8 +1,13 @@
 body {
   background-color: rgb(253 , 251 , 251);
+  
 }
 
 #cabecalho {
     position: fixed;
     top: 0px;
+}
+
+#minha_foto {
+  width: 300px;
 }
