--- a/style.css
+++ b/style.css
@@ -1,14 +1,39 @@
+* {
+  font-family: 'Roboto', sans-serif;
+}
+
 body {
   background-color: rgb(253 , 251 , 251);
 }
 
+.container {
+  margin-top: 100px;
+}
+
 #cabecalho {
+  display: block;
   position: fixed;
   top: 0;
+  left: 0;
+  width: 100%;
+  padding-left: 15px;
+  background: #1C5D99;
+  color: #fff;
 }
 
 #minha_foto {
-  position: relative;
-  top: 50px;
   width: 200px;
+  border-radius: 50%;
+  margin-bottom: 5px;
+}
+
+.image_base {
+  border: 1px solid #ddd;
+  display: inline;
+  border-radius: 50%;
+  background-color: #222222;
+}
+
+.div_ol {
+  display: inline-block;
 }
