--- a/style.css
+++ b/style.css
@@ -1,8 +1,13 @@
 * {
-  margin: 0;
-  padding: 0;
+    margin: 0;
+    padding: 0;
 }
 
 body {
-  background-color: rgb(253 , 251 , 251);
+    background-color: rgb(253 , 251 , 251);
+}
+
+#cabecalho nav {
+    position: fixed;
+    top: 0px;
 }
