--- a/style.css
+++ b/style.css
@@ -6,3 +6,13 @@ body {
   position: fixed;
   top: 0px;
 }
+
+table, th, td {
+  border: 2px solid black;
+  border-collapse: collapse;
+  padding: 10px;
+}
+
+td {
+  text-align: center;
+}
