--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 /*                                                   --- BODY ---                                                    */
-body{
+body {
     background-color: rgb( 253, 251, 251);
 }
 
 /*                                                   --- HEADER ---                                                    */
-header{
+header {
     position: fixed;
-    top: 0px;
+    margin-top: 0px;
 }
