--- a/style.css
+++ b/style.css
@@ -8,21 +8,26 @@ body {
 }
 
 #minha_foto {
-    width: 55%;
+    width: 45%;
 }
 
 #licoes_aprendidas {
     position: relative;
-    top: 350px;
+    top: 280px;
 }
 
 #licoes_a_aprender {
     position: relative;
-    top: 150px;
+    top: 80px;
     left: 250px;
 }
 
 #link {
     position: relative;
-    top: 180px;
+    top: 100px;
+}
+
+article {
+    position: relative;
+    top: 100px;
 }
