--- a/style.css
+++ b/style.css
@@ -18,13 +18,14 @@ a {
 #cabecalho {
   position: fixed;
   top: 0;
-  background-color: #fddc5c;
-  border: #665fd1 2px solid;
+  background-color: rgb(253 , 220 , 92);
+  border: rgb(102 , 95 , 209) 2px solid;
   width: 100%;
   height: 10%;
   color: #665fd1;
   text-align: center;
 }
+
 #corpoDaPag {
   height: 80%;
 }
@@ -39,12 +40,12 @@ a {
   margin-left: 50px;
   margin-top: 7%;
   display: inline-block;
-  border: 3px #665fd1 solid;
+  border: 3px rgb(102 , 95 , 209) solid;
 }
 
 #rodape {
-  background-color: #fddc5c;
-  color: #665fd1;
+  background-color: rgb(253 , 220 , 92);
+  color: rgb(102 , 95 , 209);
   text-align: center;
   height: 10%;
   margin-top: 5%;
@@ -56,5 +57,5 @@ a {
 }
 
 .texto > p {
-  margin: 0px 20px;
+  margin: 0 20px;
 }
