--- a/style.css
+++ b/style.css
@@ -1,7 +1,9 @@
 body {
-    background-color: rgb(253 , 251 , 251;
+    background-color: rgb(253 , 251 , 251);
 }
 #cabecalho{
     position: fixed;
-    top: 0px;
+    top: 0x;
+    background-color: green;
+    width: 100%;
 }
