--- a/style.css
+++ b/style.css
@@ -25,8 +25,11 @@ body {
 
 #minha_foto {
     width: 300px;
-    position: absolute;
     top: 100px;
+}
+
+#licoes_aprendidas {
+
 }
 
 /* Inherit styles */
