adicionando requisito bonus tabela

--- a/style.css
+++ b/style.css
@@ -48,4 +48,9 @@
         text-align: right;
         margin-bottom: 50px;
         }
+        #tabela{
+            position: absolute;
+            top: 240px;
+            right: 0px;
+        }
     </style>
