--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
 body {
   background-color: rgb(253 , 251 , 251);
 }
+#cabecalho {
+  position: fixed;
+  top: 0px;
+}
+#titulo {
+  position: absolute;
+  z-index: 1; 
+}
