--- a/style.css
+++ b/style.css
@@ -1,2 +1,14 @@
-body { background-color: rgb(253, 251, 251); }
-#cabecalho { margin-top: 0px; position: fixed; }
+body {
+  background-color: rgb(253 ,251 ,251);
+}
+
+#cabecalho {
+  top: 0px;
+  position: fixed;
+  background-color: teal;
+  width: 100%;
+}
+
+#titulo {
+  text-align: center;
+}
