--- a/style.css
+++ b/style.css
@@ -1,28 +1,32 @@
 * {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
 body {
-    background-color: rgb(253, 251, 251);
-    padding-bottom:20px;
-    margin-bottom: 15px;
+  background-color: rgb(253 ,251 ,251);
+  padding-bottom: 20px;
+  margin-bottom: 15px;
 }
 
 header {
-    background-color: #03a303;
-    border-radius: 0 15px 17px 15px;
-    padding-top: 15px;
-    margin-bottom: 25px;
-    margin-top: 0;
+  max-width: 1366px;
+  max-height: 768px;
+  border-radius: 0 15px 17px;
+  background-color: #03a303;
+  padding-top: 15px;
+  margin-bottom: 25px;
+  margin-top: 0;
+  width: 100%;
+  position: fixed;
 }
 
 header h1 {
-    padding-left: 20px;
-    color: aliceblue;
+  padding-left: 20px;
+  color: aliceblue;
 }
 
 header h2 {
-    padding-left: 20px;
-    color: aliceblue;
+  padding-left: 20px;
+  color: aliceblue;
 }
