--- a/style.css
+++ b/style.css
@@ -1,9 +1,3 @@
-.header {
-    text-align: center;
-    text-emphasis: bold;
-    font-size: 1em;
-    }
-
 body {
     background-color: rgb(253, 251, 251);
     font-size: 20px;
@@ -13,3 +7,19 @@ body {
     margin-top: 40px;
     text-align: center;
     }
+
+#cabecalho {
+    margin-top: 0px;
+    text-align: center;
+    text-emphasis: bold;
+    font-size: 1em;
+    background-color: red;
+    }
+#titulo {
+    text-align: center;
+    color: blue;
+}    
+
+#minha_foto {
+    align-content: center;
+}
