--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 body {
     background-color: rgb(253 , 251 , 251);
 }
-#cabecalho{
+#cabecalho {
     position: fixed;
-    top: 0x;
+    top: 0px;
     background-color: green;
     width: 100%;
 }
