Passo 3 + Correçoes - Adicionado imagem; corrigido identeçao para 2 espaços e corrigido referencia do Header no CSS de Classe para ID.

--- a/style.css
+++ b/style.css
@@ -2,8 +2,8 @@ body {
 	background-color: rgb(253 , 251 , 251);
 }
 
-.cabeçalho {
+#cabeçalho {
 	position: fixed;
 	top: 0px;
-	right: 0px;
+	left: 0px;
 }
