--- a/style.css
+++ b/style.css
@@ -7,7 +7,15 @@ body {
   background-color: rgb(253 , 251 , 251);
 }
 
-#cabecalho nav {
+nav {
+  width: 100%;
+  height: 100px;
+  border: 1px solid red;
+}
+
+#cabecalho {
   position: fixed;
   top: 0;
+  background-color: #2E2E2E;
+  border: 1px solid red;
 }
