--- a/style.css
+++ b/style.css
@@ -1,8 +1,7 @@
-body{
-        background-color: rgb(253, 251, 251);
+body {
+        background-color: rgb(253 , 251 , 251);
 }
 
-#cabecalho{
+#cabecalho {
         position: fixed;
-        top: 0px;
-}
+        top: 0}
