--- a/style.css
+++ b/style.css
@@ -1,14 +1,22 @@
 body {
-    background-color: rgb(253, 251, 251);
+  background-color: rgb(253 , 251 , 251);
+
 }
+
 header {
-    position: fixed;
-    top: 0;
-    color: white;
-    font-family: 'Work Sans';
-    font-weight: 800;
-    text-align: center;
-    background-color: teal;
-    width: 100%;
-   
+  position: fixed;
+  top: 0;
+  color: white;
+  font-family: Work Sans;
+  font-weight: 800;
+  text-align: center;
+  background-color: teal;
+  width: 100%;
+}
+
+#minha_foto {
+  width: 200px;
+  position: relative;
+  top: 100px;
+  border-radius: 50%;
 }
