--- a/style.css
+++ b/style.css
@@ -10,8 +10,8 @@ body {
 }
 
 footer {
-  background-color: #444444;
-  color: #E2E2E2;
+  background-color: #444;
+  color: #e2e2e2;
   text-align: center;
 }
 
@@ -20,9 +20,9 @@ com a propriedade top tendo 0px. */
 
 #cabecalho {
   padding: 2rem;
-  color: #E2E2E2;
+  color: #e2e2e2;
   text-align: center;
-  background-color: #444444;
+  background-color: #444;
   top: 0;
 }
 
@@ -30,19 +30,21 @@ com a propriedade top tendo 0px. */
   width: 200px;
 }
 
-.artigo
+.artigo 
 {
   text-align: justify;
-  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-family: sans-serif;
+  font-size: medium;
+  letter-spacing: 1px;
 }
 
-.lado-esquerdo
+.lado-esquerdo 
 {
   padding: 3rem;
   width: 30%;
 }
 
-.lado-direito
+.lado-direito 
 {
   padding: 3rem;
   width: 30%;
