--- a/style.css
+++ b/style.css
@@ -16,6 +16,6 @@ nav {
 #cabecalho {
   position: fixed;
   top: 0;
-  background-color: #2E2E2E;
+  background-color: rgb(66 , 66 , 66);
   border: 1px solid red;
 }
