--- a/style.css
+++ b/style.css
@@ -4,16 +4,16 @@
 }
 
 body {
-  background-color: rgb(253 ,251 ,251);
+  background-color: rgb(253,251,251);
   padding-bottom: 20px;
   margin-bottom: 15px;
 }
 
-header {
+#cabecalho {
   max-width: 1366px;
   max-height: 768px;
   border-radius: 0 15px 17px;
-  background-color: #03a303;
+  background-color: rgb(3,163,3);
   padding-top: 15px;
   margin-bottom: 25px;
   margin-top: 0;
@@ -21,12 +21,12 @@ header {
   position: fixed;
 }
 
-header h1 {
+#cabecalho h1 {
   padding-left: 20px;
   color: aliceblue;
 }
 
-header h2 {
+#cabecalho h2 {
   padding-left: 20px;
   color: aliceblue;
 }
